# iconv-for-windows

./: CMakeLists.txt
include/: iconv.h
